minikube-k8s/auth/2-vs.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: auth-vsvc
  namespace: demo
spec:
  hosts:
    - "api.localdev.me"
  gateways:
    - api-gateway
  http:

    # Canary route must be first
    - name: auth-canary-debug
      match:
        - uri:
            prefix: "/auth/"
          headers:
            x-canary:
              exact: "true"
        - uri:
            exact: "/auth"
          headers:
            x-canary:
              exact: "true"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: auth-canary
            port:
              number: 3002

    # Stable route
    - name: auth-route
      match:
        - uri:
            prefix: "/auth/"
        - uri:
            exact: "/auth"
      rewrite:
        uri: "/"
      # corsPolicy:
      #   allowOrigins:
      #     - exact: "http://frontend.localdev.me"
      #   allowMethods: ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
      #   allowHeaders: ["*"]
      #   allowCredentials: true
      #   maxAge: "1h"
      route:
        - destination:
            host: auth-stable
            port:
              number: 3002
          weight: 100
        - destination:
            host: auth-canary
            port:
              number: 3002
          weight: 0
